# src/entity/v1/db/subcategory/subcategory.go
@@ -1,10 +1,16 @@
 package subcategory
 
-import "cloud.google.com/go/firestore"
+import "github.com/Artexus/api-widyabhuvana/src/util/aes"
 
 type SubCategory struct {
-	CategoryID string                    `firestore:"category_id"`
-	Name       string                    `firestore:"name"`
-	Tasks      []firestore.CollectionRef `firestore:"tasks"`
-	MaxPoint   int                       `firestore:"max_point"`
+	ID         string   `firestore:"id"`
+	CategoryID string   `firestore:"category_id"`
+	Name       string   `firestore:"name"`
+	Tasks      []string `firestore:"tasks"`
+	MaxPoint   int      `firestore:"max_point"`
+	TotalTask  int      `firestore:"total_task"`
+}
+
+func (sc SubCategory) EncID() string {
+	return aes.EncryptID(sc.ID)
 }
